--- a/Jungle-Academy/portfolio4-admin_design/index.html
+++ b/Jungle-Academy/portfolio4-admin_design/index.html
@@ -348,28 +348,31 @@
             </li>
           </ul>
 
-          <table>
-            <colgroup>
-              <col style="width:25%;">
-              <col style="width:55%;">
-              <col style="width:20%;">
-            </colgroup>
-            <tbody>
-              <tr>
-                <td>last sale</td>
-              </tr>
-              <tr>
-                <td>25601</td>
-                <td>Redesign projuct template</td>
-                <td>$<span>4500</span></td>
-              </tr>
-              <tr>
-                <td>25602</td>
-                <td>Redesign projuct template</td>
-                <td>$<span>4700</span></td>
-              </tr>            
-            </tbody>
-          </table>
+          <div class="table-wrap">
+            <table>
+              <colgroup>
+                <col style="width:25%;">
+                <col style="width:55%;">
+                <col style="width:20%;">
+              </colgroup>
+              <!-- table > span 에 금액 천단위 , 넣기 -->
+              <tbody>
+                <tr>
+                  <td>last sale</td>
+                </tr>
+                <tr>
+                  <td>25601</td>
+                  <td>Redesign projuct template</td>
+                  <td>$<span>4500</span></td>
+                </tr>
+                <tr>
+                  <td>25602</td>
+                  <td>Redesign projuct template</td>
+                  <td>$<span>4700</span></td>
+                </tr>            
+              </tbody>
+            </table>
+          </div>
 
           <!-- 움직이는거 구현하기 -->
           <div><span class="child-text-ir">디자인용 그림</span></div>
