4번 리스트 div 어디갔니

--- a/Jungle-Academy/portfolio4-admin_design/index.html
+++ b/Jungle-Academy/portfolio4-admin_design/index.html
@@ -11,7 +11,7 @@
   <title>index/admin/portfolio</title>
   <!-- http://webarch.revox.io/3.0/html/index.html# -->
   <!-- 5/20 1h, 5/21 20:30~1:00 4.5h, 5/22 22:00~2:00 4h, 5/25 13:00~16:00 3h 20:00~22:30 2.5h,
-  5/26 14:00~14:30 0.5h 15:00~18:00 3h 5/27 14:00~17:00 3h 5/28 10:30~11:30 -->
+  5/26 14:00~14:30 0.5h 15:00~18:00 3h 5/27 14:00~17:00 3h 5/28 10:30~11:30 5/29 10:30~ -->
   <!-- 브라우저 크기 1600px -->
 </head>
 <body>
@@ -406,30 +406,30 @@
             <div>
               <i class="fas fa-map-marker-alt"><span class="child-text-ir">핀 아이콘</span></i>
               <span>21 Jan</span>
-              <p>New Year <em>UI Bundle</em><br>now on webarch</p>
+              <p>New Year <em>UI Bundle</em> now on webarch</p>
             </div>
             <div>
               <i class="fas fa-map-marker-alt"><span class="child-text-ir">핀 아이콘</span></i>
               <span>21 Jan</span>
-              <p>New Year <em>UI Bundle</em><br>now on webarch</p>
+              <p>New Year <em>UI Bundle</em> now on webarch</p>
             </div>
           </li>
           <li>
             <div>
               <div>
                 <span class="user"><img src="img/d.jpg" alt="jane smith 프로필 사진"></span>
-                <h2><span>jane</span>smith</h2>
-                <span>@ Revox</span>
+                  <h2><span>jane</span> smith</h2>
+                  <span class="revox">@ Revox</span>
               </div>
-              <p>"Just <em>completed</em> the <em>Heart wald</em> advertiong campaign.</p>
+              <p>"Just <em>completed</em> the <em>Heart walk</em> advertiong campaign."</p>
             </div>
             <div>
               <div>
                 <span class="user"><img src="img/avatar_small.jpg" alt="david cooper 프로필 사진"></span>
-                <h2><span>jane</span>smith</h2>
-                <span>@ Revox</span>
+                  <h2><span>david</span> cooper</h2>
+                  <span class="revox">@ Revox</span>
               </div>
-              <p>"Just <em>completed</em> the <em>Heart wald</em> advertiong campaign.</p>
+              <p>"Just <em>completed</em> the <em>Heart walk</em> advertiong campaign."</p>
             </div>
           </li>
           <li>
@@ -448,11 +448,11 @@
           <li>
             <div>
               <img src="img/11.png" alt="album cover">
-              <p>
+              <div>
                 <h2>RUN AWAY GO</h2>
                 <span>Queen's favourite</span>
                 <a href="#"><i class="fas fa-arrow-circle-up"><span class="child-text-ir">위 화살표</span></i>read more</a>
-              </p>
+              </div>
             </div>
             <div>
               <img src="img/cover.jpg" alt="album cover">
