--- a/Jungle-Academy/portfolio4-admin_design/index.html
+++ b/Jungle-Academy/portfolio4-admin_design/index.html
@@ -11,7 +11,7 @@
   <title>index/admin/portfolio</title>
   <!-- http://webarch.revox.io/3.0/html/index.html# -->
   <!-- 5/20 1h, 5/21 20:30~1:00 4.5h, 5/22 22:00~2:00 4h, 5/25 13:00~16:00 3h 20:00~22:30 2.5h,
-  5/26 14:00~14:30 0.5h 15:00~18:00 3h 5/27 14:00~17:00 3h 5/28 10:30~11:30 -->
+  5/26 14:00~14:30 0.5h 15:00~18:00 3h 5/27 14:00~17:00 3h 5/28 10:30~11:30 1h 5/31 15:10~ -->
   <!-- 브라우저 크기 1600px -->
 </head>
 <body>
@@ -401,66 +401,37 @@
             <button>Join Group</button>
           </div>
         </div>
-        <ul>
+        <ul class="joing-board">
           <li>
             <div>
-              <i class="fas fa-map-marker-alt"><span class="child-text-ir">핀 아이콘</span></i>
-              <span>21 Jan</span>
-              <p>New Year <em>UI Bundle</em><br>now on webarch</p>
+              <img src="img/joing-img/list1-1.png" alt="21 jan, new year UI Bundle now on webarch">
             </div>
             <div>
-              <i class="fas fa-map-marker-alt"><span class="child-text-ir">핀 아이콘</span></i>
-              <span>21 Jan</span>
-              <p>New Year <em>UI Bundle</em><br>now on webarch</p>
+              <img src="img/joing-img/list1-1.png" alt="21 jan, new year UI Bundle now on webarch">
             </div>
           </li>
           <li>
             <div>
-              <div>
-                <span class="user"><img src="img/d.jpg" alt="jane smith 프로필 사진"></span>
-                <h2><span>jane</span>smith</h2>
-                <span>@ Revox</span>
-              </div>
-              <p>"Just <em>completed</em> the <em>Heart wald</em> advertiong campaign.</p>
+              <img src="img/joing-img/list2-1.png" alt="Jane smith, 'just completed the heart walk adverting campaign'">
             </div>
             <div>
-              <div>
-                <span class="user"><img src="img/avatar_small.jpg" alt="david cooper 프로필 사진"></span>
-                <h2><span>jane</span>smith</h2>
-                <span>@ Revox</span>
-              </div>
-              <p>"Just <em>completed</em> the <em>Heart wald</em> advertiong campaign.</p>
+              <img src="img/joing-img/list2-2.png" alt="david cooper, 'just completed the heart walk adverting campaign'">
             </div>
           </li>
           <li>
             <div>
-              <h2>today sale's <span>450 <em>USD</em></span>last sale 2345 USD</h2>
-              <span><img src="" alt="">이미지로 차트 넣기</span>
+              <img src="img/joing-img/list3-1.png" alt="15% up, webarch dashboard 2,567USD, front-end design 1,420USD">
             </div>
             <div>
-              <h2><span>15</span> % <i class="fas fa-arrow-circle-up"><span class="child-text-ir">위 화살표</span></i></h2>
-              <p>
-                <span><em>webbarch dashboard</em>2,567 USD <i class="fas fa-sort-down"><span class="child-text-ir">아래 화살표</span></i> 2%</span>
-                <span><em>front-end design</em>1,420 USD <i class="fas fa-sort-down"><span class="child-text-ir">아래 화살표</span></i> 1%</span>
-              </p>
+              <img src="img/joing-img/list3-2.png" alt="today sale's 450USD, last sale 23.45USD">
             </div>
           </li>
           <li>
             <div>
-              <img src="img/11.png" alt="album cover">
-              <p>
-                <h2>RUN AWAY GO</h2>
-                <span>Queen's favourite</span>
-                <a href="#"><i class="fas fa-arrow-circle-up"><span class="child-text-ir">위 화살표</span></i>read more</a>
-              </p>
+              <img src="img/joing-img/list4-1.png" alt="run away go, queen's favourite">
             </div>
             <div>
-              <img src="img/cover.jpg" alt="album cover">
-              <p>
-                <h2>BLACK SUN EMPIRE</h2>
-                <span>king's favourite</span>
-                <a href="#"><i class="fas fa-arrow-circle-up"><span class="child-text-ir">위 화살표</span></i>read more</a>
-              </p>
+              <img src="img/joing-img/list4-2.png" alt="black sun empire, king's favourite">
             </div>
           </li>
         </ul>
@@ -473,7 +444,7 @@
     </div>
   </main>
   
-  <script src="js/header.js"></script>
+  <script src="js/index.js"></script>
 
 </body>
 </html>
