--- a/Jungle-Academy/portfolio5-full_page_design/index.html
+++ b/Jungle-Academy/portfolio5-full_page_design/index.html
@@ -21,7 +21,9 @@
   <div id="fullpage">
     <section class="section intro">
       <div class="content-wrap">
-        <img src="img/profile.jpg" alt="프로필사진">
+        <div class="img-wrap">
+          <img src="img/profile.jpg" alt="프로필사진">
+        </div>
         <!-- 가운데로 보내고 싶음 -->
         <div>
           <p>
@@ -44,21 +46,81 @@
         </div>
       </div>
     </section>
-    <section class="section portfolio1" id="portfolio1">
+    <section class="section pp pp1" id="portfolio1">
       <div class="content-wrap">
+        <ul class="content">
+          <li>
+            <img src="img/device/device.png" alt="device">
+            <div class="desk">
+              <table>
+                <colgroup>
+                  <col style="width: 150px">
+                </colgroup>
+                <caption>WARE VALLEY<span>Copy and Part renewal</span></caption>
+                <!-- thead 생략함 -->
+                <tbody>
+                  <tr>
+                    <th>Viewport</th>
+                    <td>PC / Tablet / Mobile</td>
+                  </tr>
+                  <tr>
+                    <th>IE Surpport</th>
+                    <td>IE10+ / Chrome</td>
+                  </tr>
+                  <tr>
+                    <th>참여도</th>
+                    <td>퍼블리싱 100%</td>
+                  </tr>
+                  <tr>
+                    <th>구성(링크)</th>
+                    <td>main-page
+                      <a href="#">login page</a>
+                      <a href="#">sign-up page</a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
 
+              <!-- class명 어떻게 해야할지 모르겠음 -->
+              <ul class="sub-title">
+                <li>메인 헤더 구조 및 효과 변경</li>
+                <li>jQuery 사용자 정의 함수로 만든 basic 슬라이드 및 Swipe</li>
+                <li>CSS3와 jQuery 사용자 정의 함수를 이용한 인터렉티브 모션</li>
+                <li>카운팅 애니메이션</li>
+              </ul>
+
+              <div class="btn">
+                <a href="#">Go to Website</a>
+                <a href="#">Go to Github</a>
+              </div>
+            </div>
+          </li>
+
+          <!-- 두번째 슬라이드 -->
+          <li>
+            두번째 슬라이드가 옆으로 나오게 해야함
+          </li>
+        </ul>
+
+        <p class="control">
+          <a href="#" class="prev"><img alt="이전 이미지" src="img/image-slide/btn_left.png" /></a>
+          <a href="#" class="next"><img alt="다음 이미지" src="img/image-slide/btn_right.png" /></a>
+        </p>
+
+        <!-- li개수에 따라 인디케이터 생기게 -->
+        <span class="indicator">1/5</span>
       </div>
     </section>
-    <section class="section portfolio2" id="portfolio2">
+    <section class="section pp pp2" id="portfolio2">
       <div class="content-wrap">
       </div>
     </section>
-    <section class="section portfolio3" id="portfolio3">
+    <section class="section pp pp3" id="portfolio3">
       <div class="content-wrap">
       </div>
     </section>
 
-    <section class="section portfolio4" id="portfolio4">
+    <section class="section pp pp4" id="portfolio4">
       <div class="content-wrap">
         <ul class="content">
           <li>
@@ -144,9 +206,7 @@
         </p>
 
         <!-- li개수에 따라 인디케이터 생기게 -->
-        <ul class="indicator">               
-          <li class="on"><a href="#">1번 비주얼</a></li>
-        </ul>
+        <span class="indicator">1/5</span>
       </div>
     </section>
 
