--- a/Jungle-Academy/portfolio5-full_page_design/index.html
+++ b/Jungle-Academy/portfolio5-full_page_design/index.html
@@ -46,9 +46,12 @@
         </div>
       </div>
     </section>
+
+    <!-- pp1 -->
     <section class="section pp pp1" id="portfolio1">
       <div class="content-wrap">
         <ul class="content">
+          <!-- li1 -->
           <li>
             <img src="img/device/device.png" alt="device">
             <div class="desk">
@@ -96,9 +99,26 @@
             </div>
           </li>
 
-          <!-- 두번째 슬라이드 -->
+          <!-- li2 -->
           <li>
-            두번째 슬라이드가 옆으로 나오게 해야함
+            <ul class="explain-wrap">
+              <li>
+                <img src="img/device/device.png" alt="device">
+              </li>
+              <li class="sub-explain">
+                <ul class="part-explain">
+                  <li>메인 헤더 구조 및 효과 변경</li>
+                </ul>
+              </li>
+              <li>
+                <img src="img/device/device.png" alt="device">
+              </li>
+            </ul>
+
+            <div class="btn">
+              <a href="#">Go to Website</a>
+              <a href="#">Go to Github</a>
+            </div>
           </li>
         </ul>
 
@@ -107,10 +127,12 @@
           <a href="#" class="next"><img alt="다음 이미지" src="img/image-slide/btn_right.png" /></a>
         </p>
 
-        <!-- li개수에 따라 인디케이터 생기게 -->
+        <!-- 인디케이터 생기게 -->
         <span class="indicator">1/5</span>
       </div>
     </section>
+
+    <!-- pp2 -->
     <section class="section pp pp2" id="portfolio2">
       <div class="content-wrap">
       </div>
@@ -122,91 +144,6 @@
 
     <section class="section pp pp4" id="portfolio4">
       <div class="content-wrap">
-        <ul class="content">
-          <li>
-            <img src="img/device/device.png" alt="device">
-            <div class="desk">
-              <table>
-                <colgroup>
-                  <col style="width: 150px">
-                </colgroup>
-                <caption>ADIMIN DESIGN<span>Copy</span></caption>
-                <!-- thead 생략함 -->
-                <tbody>
-                  <tr>
-                    <th>Viewport</th>
-                    <td>PC / Tablet / Mobile</td>
-                  </tr>
-                  <tr>
-                    <th>IE Surpport</th>
-                    <td>IE10+ / Chrome</td>
-                  </tr>
-                  <tr>
-                    <th>참여도</th>
-                    <td>디자인, 퍼블리싱 100%</td>
-                  </tr>
-                  <tr>
-                    <th>구성(링크)</th>
-                    <td>main-page
-                      <a href="#">sub-page1</a>
-                      <a href="#">sub-page2</a>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
-
-              <!-- class명 어떻게 해야할지 모르겠음 -->
-              <ul class="sub-title">
-                <li>메인 메뉴 구조의 통일</li>
-                <li><span>웹 접근성 관리(WAI-ARIA)</span></li>
-                <li>jQuery 사용자 정의 함수로 만든 슬라이드 (Mobile Swipe)</li>
-                <li>CSS3와 jQuery 사용자 정의 함수를 이용한 인터렉티브 모션</li>
-                <li>카운팅 애니메이션</li>
-              </ul>
-
-              <div class="btn">
-                <a href="#">Go to Website</a>
-                <a href="#">Go to Github</a>
-              </div>
-            </div>
-          </li>
-          <!-- <li>
-            두번째 슬라이드
-            <div class="btn">
-              <a href="#">Go to Website</a>
-              <a href="#">Go to Github</a>
-            </div>
-          </li>
-          <li>
-            세번째 슬라이드
-            <div class="btn">
-              <a href="#">Go to Website</a>
-              <a href="#">Go to Github</a>
-            </div>
-          </li>
-          <li>
-            네번째 슬라이드
-            <div class="btn">
-              <a href="#">Go to Website</a>
-              <a href="#">Go to Github</a>
-            </div>
-          </li>
-          <li>
-            다섯번째 슬라이드
-            <div class="btn">
-              <a href="#">Go to Website</a>
-              <a href="#">Go to Github</a>
-            </div>
-          </li> -->
-        </ul>
-
-        <p class="control">
-          <a href="#" class="prev"><img alt="이전 이미지" src="img/image-slide/btn_left.png" /></a>
-          <a href="#" class="next"><img alt="다음 이미지" src="img/image-slide/btn_right.png" /></a>
-        </p>
-
-        <!-- li개수에 따라 인디케이터 생기게 -->
-        <span class="indicator">1/5</span>
       </div>
     </section>
 
