--- a/Jungle-Academy/portfolio4-admin_design/index.html
+++ b/Jungle-Academy/portfolio4-admin_design/index.html
@@ -360,6 +360,7 @@
                 <col style="width:20%;">
               </colgroup>
               <!-- table > span 에 금액 천단위 , 넣기 -->
+              <!-- 말줄임 나올 수 있게 적용하기 -->
               <tbody>
                 <tr>
                   <td>last sale</td>
@@ -367,7 +368,7 @@
                 <tr>
                   <td>25601</td>
                   <td>Redesign product template</td>
-                  <td>$<span>4500</span></td>
+                  <td>$<span>4700</span></td>
                 </tr>
                 <tr>
                   <td>25602</td>
@@ -443,6 +444,72 @@
         <div class="weather">
           <p>날씨</p>
         </div>
+      </section>
+
+      <section class="desc">
+        <div class="desc-content">
+          <div class="table-wrap">
+            <table>
+              <colgroup>
+                <col style="width:25%;">
+                <col style="width:55%;">
+                <col style="width:20%;">
+              </colgroup>
+              <!-- table > span 에 금액 천단위 , 넣기 -->
+              <!-- 말줄임 나올 수 있게 적용하기 -->
+              <tbody>
+                <tr>
+                  <td>No.</td>
+                  <td>Title</td>
+                  <td>Writer</td>
+                </tr>
+                <tr>
+                  <td>25601</td>
+                  <td>Redesign product template</td>
+                  <td>miryean</td>
+                </tr>
+                <tr>
+                  <td>25602</td>
+                  <td>Redesign product template</td>
+                  <td>miryean</td>
+                </tr>
+                <tr>
+                  <td>25602</td>
+                  <td>Redesign product template</td>
+                  <td>miryean</td>
+                </tr>
+                <tr>
+                  <td>25602</td>
+                  <td>Redesign product template</td>
+                  <td>miryean</td>
+                </tr>
+                <tr>
+                  <td>25602</td>
+                  <td>Redesign product template</td>
+                  <td>miryean</td>
+                </tr>
+                <tr>
+                  <td>25602</td>
+                  <td>Redesign product template</td>
+                  <td>miryean</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptate architecto numquam rem officia et exercitationem animi quis unde. Excepturi reprehenderit architecto dolores? Velit ipsum cum ratione dignissimos eligendi, repudiandae libero!
+          </p>
+        </div>
+
+        <ul>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
       </section>
 
     </div>
