--- a/Jungle-Academy/portfolio1-smart/index.html
+++ b/Jungle-Academy/portfolio1-smart/index.html
@@ -112,7 +112,7 @@
     })
     // 이걸 넣으면 마지막 액션이 적용되지 않음
     .then(function(){
-     location.href = 'main.html';
+     location.href = 'page/main.html';
     })
     ;
 
