--- a/Jungle-Academy/portfolio2-warevalley/index.html
+++ b/Jungle-Academy/portfolio2-warevalley/index.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="js/menu-active.js"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/header-and-footer-style.css">
-  <link rel="stylesheet" href="css/ware-valley.css">
+  <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/swiper.css">
   <title>WareValley</title>
   </head>
@@ -122,7 +122,7 @@
         </a>
         <nav class="tnb">
           <a href="javascript:;"><i class="far fa-file-alt"></i> Warevalley Data</a>
-          <a href="sign-in.html"><i class="fas fa-fingerprint"></i> Login</a>
+          <a href="page/sign-in.html"><i class="fas fa-fingerprint"></i> Login</a>
           <a href="javascript:;"><i class="fas fa-globe"></i> Language</a>
         </nav>
       </div>
