이메일 ui 게시판으로 바꾸고 게시판 페이지 만들기

--- a/Jungle-Academy/portfolio4-admin_design/index.html
+++ b/Jungle-Academy/portfolio4-admin_design/index.html
@@ -25,7 +25,7 @@
         <li class="bell"><i class="far fa-bell"><span class="child-text-ir">알림종 아이콘</span></i></li>
         <li class="search-board">
           <input type="text" placeholder="Search Dashboard">
-          <a><i class="fas fa-search"><span class="child-text-ir">돋보기 아이콘</span></i></a>
+          <a href="#"><i class="fas fa-search"><span class="child-text-ir">돋보기 아이콘</span></i></a>
         </li>
       </ul>
 
@@ -511,17 +511,17 @@
             </tr>
             <tr>
               <td>thur</td>
-              <td class="w-icon"><span></span></td>
+              <td class="w-icon"><span class="w-sunny"></span></td>
               <td class="w-deg"><span>32</span>-<span>28</span> C&#176;</td>
             </tr>
             <tr>
               <td>fri</td>
-              <td class="w-icon"><span></span></td>
+              <td class="w-icon"><span class="w-sunny"></span></td>
               <td class="w-deg"><span>32</span>-<span>28</span> C&#176;</td>
             </tr>
             <tr>
               <td>sat</td>
-              <td class="w-icon"><span></span></td>
+              <td class="w-icon"><span class="w-sunny"></span></td>
               <td class="w-deg"><span>32</span>-<span>28</span> C&#176;</td>
             </tr>
           </table>
