게시판 만드는중

--- a/Jungle-Academy/portfolio4-admin_design/index.html
+++ b/Jungle-Academy/portfolio4-admin_design/index.html
@@ -12,7 +12,7 @@
   <!-- http://webarch.revox.io/3.0/html/index.html# -->
   <!-- 5/20 1h, 5/21 20:30~1:00 4.5h, 5/22 22:00~2:00 4h, 5/25 13:00~16:00 3h 20:00~22:30 2.5h,
   5/26 14:00~14:30 0.5h 15:00~18:00 3h 5/27 14:00~17:00 3h 5/28 10:30~11:30 1h 5/29 14:30~17:00 2.5h 10:30~12:00 1.5h
-  5/31 15:10~17:00 6/4 13:30~ -->
+  5/31 15:10~17:00 6/4 13:30~18:00 6/5 16:00~ -->
   <!-- 브라우저 크기 1600px -->
 </head>
 <body>
@@ -84,9 +84,9 @@
             </a>
           </li>
           <li>
-            <a href="#">
-              <i class="fas fa-envelope"></i>
-              <span>email</span>
+            <a href="page/subpage-list.html">
+              <i class="fas fa-list-alt"></i>
+              <span>list</span>
             </a>
           </li>
           <li>
@@ -153,7 +153,7 @@
           </li>
           <li>
             <a href="#">
-                <i class="fas fa-th-list"></i>
+                <i class="fas fa-table"></i>
                 <span>tables</span>
               </a>
             <ul>
@@ -491,7 +491,7 @@
             <tr>
               <td>sun</td>
               <!-- span에 날씨 class넣으면 icon나옴 -->
-              <td class="w-icon"><span class="w-sunny"></span></td>
+              <td class="w-icon"><span class="w-cloudy"></span></td>
               <td class="w-deg"><span>32</span>-<span>28</span> C&#176;</td>
             </tr>
             <tr>
@@ -511,7 +511,7 @@
             </tr>
             <tr>
               <td>thur</td>
-              <td class="w-icon"><span class="w-sunny"></span></td>
+              <td class="w-icon"><span class="w-rain"></span></td>
               <td class="w-deg"><span>32</span>-<span>28</span> C&#176;</td>
             </tr>
             <tr>
@@ -598,8 +598,6 @@
 
     </div>
   </main>
-  
   <script src="js/index.js"></script>
-
 </body>
 </html>
